--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,6 +135,7 @@ body{
         width: 100%;
         position: relative;
         text-align: center;
+        gap: 4px;
     }
     .header-flex .left-content::before{
         content: " ";
@@ -163,5 +164,10 @@ body{
     }
     .hero-section .img{
         margin-top: -40px;
+    }
+
+    .kitti-img img{
+        width: 86px;
+        margin-left: 8px;
     }
 }
