--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,12 +64,12 @@ body{
     font-size: 64px;
     font-weight: 600;
     line-height: normal;
-    margin-bottom: 20px;
 }
 .hero-section .heading1{
     border-bottom: 4px solid#FF7D05;
     margin-bottom: 10px;
     line-height: 1;
+    padding-bottom: 10px;
 }
 .hero-section .text{
     color: #FFF;
@@ -169,5 +169,10 @@ body{
     .kitti-img img{
         width: 86px;
         margin-left: 8px;
+        border: 4px solid #05124e;
+    }
+
+    .ca{
+        text-align: left;
     }
 }
